# delta-vm

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
delta-asm/src/: checker.rs  lexer.rs  lib.rs  lint.rs  parser.rs
delta-cranelift/: Cargo.toml
delta-cranelift/src/: codegen.rs  lib.rs  link.rs
delta-format/: Cargo.toml
delta-format/src/: encoding.rs  file.rs  lib.rs
docs/: files.json  index.css  index.html
docs/documentation/: Examples.md  Instructions.md  Overview.md  Structure.md  Tools.md  Types.md
docs/documentation/delta-asm/: Cargo.toml
docs/documentation/delta-asm/src/: ast.rs  error.rs  lib.rs  parser.rs  resolver.rs
docs/documentation/delta-codegen/: Cargo.toml
docs/documentation/delta-codegen/src/: lib.rs
docs/documentation/delta-format/src/: opcode.rs
tools/das/: Cargo.toml
tools/das/src/: main.rs
tools/dvm/: Cargo.toml
tools/dvm/src/: main.rs
tools/installer/: Cargo.toml
tools/installer/src/: main.rs
