[package]
name = "delta-cranelift"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
delta-format = { workspace = true }
cranelift-codegen = "=0.105.0"
cranelift-frontend = "=0.105.0"
cranelift-module = "=0.105.0"
cranelift-object = "=0.105.0"
cranelift-native = "=0.105.0"
target-lexicon = "0.12"
